--- a/crypto/eth-to-eur/index.html
+++ b/crypto/eth-to-eur/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Track your Ethereum (ETH) investments. Convert ETH to Euros (EUR) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -85,7 +85,7 @@
         </div>
     </header>
     <main class="container">
-        <h1>Live Ethereum to Euros Crypto Tracker</h1>
+        <h1>Live Ethereum to Euros Crypto Tracker (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             ETH to EUR.</p>
 
