--- a/currency.html
+++ b/currency.html
@@ -8,7 +8,7 @@
   <title>Currency Converter – Toolsified</title>
   <meta name="description"
     content="Convert currencies instantly with live exchange rates. Smart, fast and free currency tool from Toolsified." />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=2.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
