--- a/time-zone/jst-to-pst/index.html
+++ b/time-zone/jst-to-pst/index.html
@@ -8,7 +8,7 @@
         content="Convert Japan Standard Time (JST) to Pacific Time (PT) instantly. Compare schedules between jst and pst with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Current Japan Standard Time (JST) to Pacific Time (PT) Time Converter</h1>
+        <h1 id="page-title">Current Japan Standard Time (JST) to Pacific Time (PT) Time Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Japan Standard Time (JST)
             and Pacific Time (PT).</p>
 
