--- a/currency/chf-to-eur/index.html
+++ b/currency/chf-to-eur/index.html
@@ -8,7 +8,7 @@
     <title>Live CHF to EUR Exchange Rate (2026) | Convert Swiss Francs</title>
     <meta name="description"
         content="Convert Swiss Francs (CHF) to Euros (EUR) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Live Swiss Francs to Euros Converter</h1>
+        <h1 id="page-title">Live Swiss Francs to Euros Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live CHF to EUR exchange
             rate calculator.</p>
 
