--- a/currency/eur-to-aud/index.html
+++ b/currency/eur-to-aud/index.html
@@ -8,7 +8,7 @@
     <title>Live EUR to AUD Exchange Rate (2026) | Convert Euros</title>
     <meta name="description"
         content="Convert Euros (EUR) to Australian Dollars (AUD) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Live Euros to Australian Dollars Converter</h1>
+        <h1 id="page-title">Live Euros to Australian Dollars Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live EUR to AUD exchange
             rate calculator.</p>
 
