--- a/currency/sgd-to-usd/index.html
+++ b/currency/sgd-to-usd/index.html
@@ -8,7 +8,7 @@
     <title>Live SGD to USD Exchange Rate (2026) | Convert Singapore Dollars</title>
     <meta name="description"
         content="Convert Singapore Dollars (SGD) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Live Singapore Dollars to US Dollars Converter</h1>
+        <h1 id="page-title">Live Singapore Dollars to US Dollars Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live SGD to USD exchange
             rate calculator.</p>
 
