--- a/currency/usd-to-dkk/index.html
+++ b/currency/usd-to-dkk/index.html
@@ -8,7 +8,7 @@
     <title>Live USD to DKK Exchange Rate (2026) | Convert US Dollars</title>
     <meta name="description"
         content="Convert US Dollars (USD) to Danish Kroner (DKK) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Live US Dollars to Danish Kroner Converter</h1>
+        <h1 id="page-title">Live US Dollars to Danish Kroner Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live USD to DKK exchange
             rate calculator.</p>
 
