--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-  <meta name="description" content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
-    <title>Toolsified – Smart tools for everyday tasks</title>
-  <link rel="stylesheet" href="style.css" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="description"
+    content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
+  <title>Toolsified – Smart tools for everyday tasks</title>
+  <link rel="stylesheet" href="style.css?v=2.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
-     crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
+    crossorigin="anonymous"></script>
   <link rel="canonical" href="https://toolsified.com/" />
 </head>
+
 <body>
   <!-- Header -->
   <header class="site-header">
@@ -55,8 +58,10 @@
         <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
         <a href="/contact" style="color: inherit; text-decoration: underline;">Contact Us</a>
       </div>
-      <p><a href="mailto:info@toolsified.com" style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
+      <p><a href="mailto:info@toolsified.com"
+          style="color: inherit; text-decoration: underline;">info@toolsified.com</a></p>
     </div>
   </footer>
 </body>
+
 </html>
