--- a/scripts/currency-template.html
+++ b/scripts/currency-template.html
@@ -8,7 +8,7 @@
     <title>Live [FROM_TICKER] to [TO_TICKER] Exchange Rate ([YEAR]) | Convert [FROM_NAME]</title>
     <meta name="description"
         content="Convert [FROM_NAME] ([FROM_TICKER]) to [TO_NAME] ([TO_TICKER]) instantly with live exchange rates. Fast & free currency converter." />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Live [FROM_NAME] to [TO_NAME] Converter</h1>
+        <h1 id="page-title">Live [FROM_NAME] to [TO_NAME] Converter ([YEAR])</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live [FROM_TICKER] to [TO_TICKER] exchange
             rate calculator.</p>
 
