--- a/time-code/convert-edt-to-local-time/index.html
+++ b/time-code/convert-edt-to-local-time/index.html
@@ -8,7 +8,7 @@
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="card">
-            <h1 id="page-title">Latest EDT to Local Time Converter</h1>
+            <h1 id="page-title">Latest EDT to Local Time Converter (2026)</h1>
             <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Smart Eastern Daylight Time (EDT) natural
                 language translator.</p>
 
