--- a/time-zone/cet-to-jst/index.html
+++ b/time-zone/cet-to-jst/index.html
@@ -8,7 +8,7 @@
         content="Convert Central European Time (CET) to Japan Standard Time (JST) instantly. Compare schedules between cet and jst with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css?v=2.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Current Central European Time (CET) to Japan Standard Time (JST) Time Converter</h1>
+        <h1 id="page-title">Current Central European Time (CET) to Japan Standard Time (JST) Time Converter (2026)</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Central European Time (CET)
             and Japan Standard Time (JST).</p>
 
