W10.5 Audit & Polish: Standardized dynamic linking clusters and repositioned Crypto ROI tools

--- a/scripts/crypto-template.html
+++ b/scripts/crypto-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live [FROM_NAME] to [TO_NAME] Portfolio Tracker ([YEAR]) | Crypto Converter</title>
+    <title>[FROM_NAME] to [TO_NAME] Profit/Loss Tracker & ROI Calculator ([YEAR]) | Toolsified</title>
     <meta name="description"
         content="Track your [FROM_NAME] ([FROM_TICKER]) investments. Convert [FROM_TICKER] to [TO_NAME] ([TO_TICKER]) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -85,7 +85,7 @@
         </div>
     </header>
     <main class="container">
-        <h1>Live [FROM_NAME] to [TO_NAME] Crypto Tracker ([YEAR])</h1>
+        <h1>[FROM_NAME] to [TO_NAME] Historical Profit & Loss Calculator</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             [FROM_TICKER] to [TO_TICKER].</p>
 
@@ -114,16 +114,18 @@
 
     <div class="card seo-content"
         style="margin-top: 40px; text-align: left; padding: 32px; max-width: 680px; margin-left: auto; margin-right: auto;">
-        <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Track Your [FROM_TICKER] Investments in [TO_NAME]</h2>
-        <p style="text-align: left; margin-bottom: 24px;">The Toolsified <strong>[FROM_NAME] to [TO_NAME]</strong>
-            portfolio tracker is designed for quick, precise calculations. Finding exactly how much you made or lost on
-            a <strong>[FROM_TICKER]</strong> trade requires historical exchange rate data. Our tool instantly fetches
-            the precise historic market value of <strong>[FROM_NAME]</strong> in <strong>[TO_TICKER]</strong> on the
-            exact dates you bought and sold. It is strictly client-side, meaning your financial data remains completely
-            private and is never logged.</p>
+        <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Analyze [FROM_NAME] ROI in [TO_NAME]</h2>
+        <p style="text-align: left; margin-bottom: 24px;">Use the Toolsified <strong>[FROM_NAME] to [TO_NAME]</strong>
+            historical profit and loss calculator to analyze your investment performance. Whether you're tracking
+            long-term gains or calculating specific ROI, our tool provides precise market values for
+            <strong>[FROM_NAME]</strong> in <strong>[TO_TICKER]</strong> based on audited historical data. Simply enter
+            your transaction dates and amounts above to see your net results instantly. Our tool functions entirely
+            within your browser, ensuring your <strong>[FROM_TICKER]</strong> financial data remains private and secure.
+        </p>
 
         <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
         <div class="internal-links-cluster" style="margin-bottom: 32px;">
+            [RELATED_CLUSTER]
             <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart Crypto
                     Converter Hub</a></p>
         </div>
