--- a/scripts/timecode-template.html
+++ b/scripts/timecode-template.html
@@ -101,6 +101,7 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Time Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
+                [RELATED_CLUSTER]
                 <p><a href="/time-code" style="color: var(--primary-color); text-decoration: underline;">Back to
                         Time-code Translator Hub</a></p>
             </div>
