--- a/scripts/timezone-template.html
+++ b/scripts/timezone-template.html
@@ -117,6 +117,7 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
+                [RELATED_CLUSTER]
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
