--- a/crypto/eth-to-eur/index.html
+++ b/crypto/eth-to-eur/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Live Ethereum to Euros Portfolio Tracker (2026) | Crypto Converter</title>
+    <title>Ethereum to Euros Profit/Loss Tracker & ROI Calculator (2026) | Toolsified</title>
     <meta name="description"
         content="Track your Ethereum (ETH) investments. Convert ETH to Euros (EUR) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -85,7 +85,7 @@
         </div>
     </header>
     <main class="container">
-        <h1>Live Ethereum to Euros Crypto Tracker (2026)</h1>
+        <h1>Ethereum to Euros Historical Profit & Loss Calculator</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             ETH to EUR.</p>
 
@@ -114,16 +114,21 @@
 
     <div class="card seo-content"
         style="margin-top: 40px; text-align: left; padding: 32px; max-width: 680px; margin-left: auto; margin-right: auto;">
-        <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Track Your ETH Investments in Euros</h2>
-        <p style="text-align: left; margin-bottom: 24px;">The Toolsified <strong>Ethereum to Euros</strong>
-            portfolio tracker is designed for quick, precise calculations. Finding exactly how much you made or lost on
-            a <strong>ETH</strong> trade requires historical exchange rate data. Our tool instantly fetches
-            the precise historic market value of <strong>Ethereum</strong> in <strong>EUR</strong> on the
-            exact dates you bought and sold. It is strictly client-side, meaning your financial data remains completely
-            private and is never logged.</p>
+        <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Analyze Ethereum ROI in Euros</h2>
+        <p style="text-align: left; margin-bottom: 24px;">Use the Toolsified <strong>Ethereum to Euros</strong>
+            historical profit and loss calculator to analyze your investment performance. Whether you're tracking
+            long-term gains or calculating specific ROI, our tool provides precise market values for
+            <strong>Ethereum</strong> in <strong>EUR</strong> based on audited historical data. Simply enter
+            your transaction dates and amounts above to see your net results instantly. Our tool functions entirely
+            within your browser, ensuring your <strong>ETH</strong> financial data remains private and secure.
+        </p>
 
         <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
         <div class="internal-links-cluster" style="margin-bottom: 32px;">
+            <p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/currency/gbp-to-cad" style="color: var(--primary-color); text-decoration: underline;">GBP to CAD Rate</a></p>
             <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart Crypto
                     Converter Hub</a></p>
         </div>
