--- a/currency/inr-to-usd/index.html
+++ b/currency/inr-to-usd/index.html
@@ -147,6 +147,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
+                <p><a href="/currency/dkk-to-eur" style="color: var(--primary-color); text-decoration: underline;">DKK to EUR Rate</a></p>
+<p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
+<p><a href="/currency/gbp-to-usd" style="color: var(--primary-color); text-decoration: underline;">GBP to USD Rate</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
