--- a/currency/usd-to-inr/index.html
+++ b/currency/usd-to-inr/index.html
@@ -147,6 +147,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
+                <p><a href="/currency/usd-to-nzd" style="color: var(--primary-color); text-decoration: underline;">USD to NZD Rate</a></p>
+<p><a href="/currency/eur-to-nok" style="color: var(--primary-color); text-decoration: underline;">EUR to NOK Rate</a></p>
+<p><a href="/currency/eur-to-chf" style="color: var(--primary-color); text-decoration: underline;">EUR to CHF Rate</a></p>
+<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
