--- a/time-zone/ct-to-gmt/index.html
+++ b/time-zone/ct-to-gmt/index.html
@@ -117,6 +117,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
+                <p><a href="/time-zone/cet-to-jst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Japan Standard Time (JST)</a></p>
+<p><a href="/time-zone/aet-to-pst" style="color: var(--primary-color); text-decoration: underline;">Australian Eastern Time (AET) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/sgt-to-pst" style="color: var(--primary-color); text-decoration: underline;">Singapore Time (SGT) to Pacific Time (PT)</a></p>
+<p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
