--- a/time-zone/jst-to-pst/index.html
+++ b/time-zone/jst-to-pst/index.html
@@ -117,6 +117,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
+                <p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
+<p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/cet-to-est" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to Eastern Time (ET)</a></p>
+<p><a href="/time-code/convert-cest-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Central European Summer Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
