--- a/crypto/sol-to-usd/index.html
+++ b/crypto/sol-to-usd/index.html
@@ -14,33 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
         crossorigin="anonymous"></script>
-    <style>
-        main.container {
-            max-width: 100%;
-            padding: 1rem;
-        }
-
-        .table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 1rem;
-            table-layout: auto;
-        }
-
-        .table th,
-        .table td {
-            border: 1px solid #ddd;
-            padding: 0.5rem;
-            text-align: center;
-            white-space: nowrap;
-        }
-
-        .row-controls {
-            margin-top: 1rem;
-            display: flex;
-            gap: 1rem;
-        }
-    </style>
     <link rel="canonical" href="https://toolsified.com/crypto/sol-to-usd" />
     <script type="application/ld+json">
 {
@@ -84,12 +57,13 @@
             </div>
         </div>
     </header>
-    <main class="container">
+
+    <main class="page-container" style="padding-top: 48px; padding-bottom: 48px;">
         <h1>Solana to US Dollars Historical Profit & Loss Calculator</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             SOL to USD.</p>
 
-        <div class="table-container card">
+        <div class="table-container card" style="margin-top: 0;">
             <table class="table" id="cryptoTable">
                 <thead>
                     <tr>
@@ -106,49 +80,53 @@
                 </thead>
                 <tbody></tbody>
             </table>
-            <div class="row-controls">
-                <button onclick="addRow()" class="primary">Add Transaction</button>
+            <div class="row-controls" style="margin-top: 1rem; display: flex; gap: 1rem; padding: 0 1rem 1rem 1rem;">
+                <button onclick="addRow()" class="primary" style="margin-top: 0; width: auto;">+ Add
+                    Transaction</button>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Analyze Solana ROI in US Dollars</h2>
+            <p style="text-align: left; margin-bottom: 24px;">Use the Toolsified <strong>Solana to
+                    US Dollars</strong> historical profit and loss calculator to analyze your investment performance.
+                Whether you're tracking long-term gains or calculating specific ROI, our tool provides precise market
+                values for <strong>Solana</strong> in <strong>USD</strong> based on audited historical
+                data. Simply enter your transaction dates and amounts above to see your net results instantly. Our tool
+                functions entirely within your browser, ensuring your <strong>SOL</strong> financial data
+                remains private and secure.</p>
+        </div>
+
+        <div class="section">
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
+            <div class="internal-links-cluster" style="margin-bottom: 32px;">
+                <p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
+<p><a href="/crypto/eth-to-usd" style="color: var(--primary-color); text-decoration: underline;">Ethereum to US Dollars</a></p>
+<p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
+<p><a href="/currency/gbp-to-cad" style="color: var(--primary-color); text-decoration: underline;">GBP to CAD Rate</a></p>
+                <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart
+                        Crypto Converter Hub</a></p>
+            </div>
+        </div>
+
+        <div class="section">
+            <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
+            <div class="faq-item" style="margin-bottom: 16px;">
+                <strong>How do I calculate my Solana profit in US Dollars?</strong>
+                <p style="text-align: left; margin-bottom: 0;">Enter your SOL amount and transaction dates.
+                    The tool uses real historic exchange rates to calculate your profit or loss in USD.</p>
+            </div>
+            <div class="faq-item" style="margin-bottom: 16px;">
+                <strong>Is my SOL portfolio data secure?</strong>
+                <p style="text-align: left; margin-bottom: 0;">Yes. All calculations happen instantly in your browser
+                    session and your data is never saved or transmitted to our servers.</p>
             </div>
         </div>
     </main>
 
-    <div class="card seo-content"
-        style="margin-top: 40px; text-align: left; padding: 32px; max-width: 680px; margin-left: auto; margin-right: auto;">
-        <h2 style="font-size: 1.5rem; margin-bottom: 16px;">Analyze Solana ROI in US Dollars</h2>
-        <p style="text-align: left; margin-bottom: 24px;">Use the Toolsified <strong>Solana to US Dollars</strong>
-            historical profit and loss calculator to analyze your investment performance. Whether you're tracking
-            long-term gains or calculating specific ROI, our tool provides precise market values for
-            <strong>Solana</strong> in <strong>USD</strong> based on audited historical data. Simply enter
-            your transaction dates and amounts above to see your net results instantly. Our tool functions entirely
-            within your browser, ensuring your <strong>SOL</strong> financial data remains private and secure.
-        </p>
-
-        <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Crypto Tools</h3>
-        <div class="internal-links-cluster" style="margin-bottom: 32px;">
-            <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
-<p><a href="/crypto/eth-to-eur" style="color: var(--primary-color); text-decoration: underline;">Ethereum to Euros</a></p>
-<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
-<p><a href="/currency/usd-to-dkk" style="color: var(--primary-color); text-decoration: underline;">USD to DKK Rate</a></p>
-            <p><a href="/crypto" style="color: var(--primary-color); text-decoration: underline;">Back to Smart Crypto
-                    Converter Hub</a></p>
-        </div>
-
-        <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Frequently Asked Questions</h3>
-        <div class="faq-item" style="margin-bottom: 16px;">
-            <strong>How do I calculate my Solana profit in US Dollars?</strong>
-            <p style="text-align: left; margin-bottom: 0;">Enter your SOL amount and transaction dates. The
-                tool uses real historic exchange rates to calculate your profit or loss in USD.</p>
-        </div>
-        <div class="faq-item" style="margin-bottom: 16px;">
-            <strong>Is my SOL portfolio data secure?</strong>
-            <p style="text-align: left; margin-bottom: 0;">Yes. All calculations happen instantly in your browser
-                session and your data is never saved or transmitted to our servers.</p>
-        </div>
-    </div>
-
     <!-- Footer -->
     <footer style="margin-top: auto; border-top: 1px solid var(--border-color); background: var(--card-bg);">
-        <div class="container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
+        <div class="page-container" style="text-align: center; padding: 24px 16px; font-size: 0.9rem;">
             <p style="margin-bottom: 12px;">© 2025 Toolsified. Smart tools for everyday tasks.</p>
             <div style="display: flex; justify-content: center; gap: 16px; margin-bottom: 12px;">
                 <a href="/privacy" style="color: inherit; text-decoration: underline;">Privacy Policy</a>
@@ -221,9 +199,7 @@
 
                 if (!response.ok) return null;
                 const data = await response.json();
-                if (!data.rate) return null;
-
-                return data.rate;
+                return data.rate || null;
             } catch (err) {
                 return null;
             }
@@ -258,7 +234,7 @@
 
             if (typeof buyRate === 'number' && typeof sellRate === 'number') {
                 const diff = (sellRate - buyRate) * amount;
-                diffCell.textContent = (diff > 0 ? "+" : "") + diff.toFixed(2);
+                diffCell.textContent = (diff >= 0 ? "+" : "") + diff.toFixed(2);
                 diffCell.style.color = diff >= 0 ? '#10b981' : '#ef4444';
             } else {
                 diffCell.textContent = '-';
