--- a/currency/gbp-to-aud/index.html
+++ b/currency/gbp-to-aud/index.html
@@ -147,9 +147,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/chf-to-usd" style="color: var(--primary-color); text-decoration: underline;">CHF to USD Rate</a></p>
-<p><a href="/currency/nok-to-eur" style="color: var(--primary-color); text-decoration: underline;">NOK to EUR Rate</a></p>
-<p><a href="/currency/sgd-to-usd" style="color: var(--primary-color); text-decoration: underline;">SGD to USD Rate</a></p>
+                <p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
+<p><a href="/currency/usd-to-gbp" style="color: var(--primary-color); text-decoration: underline;">USD to GBP Rate</a></p>
+<p><a href="/currency/usd-to-sgd" style="color: var(--primary-color); text-decoration: underline;">USD to SGD Rate</a></p>
 <p><a href="/crypto/btc-to-usd" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
