--- a/currency/usd-to-dkk/index.html
+++ b/currency/usd-to-dkk/index.html
@@ -147,10 +147,10 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
-                <p><a href="/currency/aud-to-eur" style="color: var(--primary-color); text-decoration: underline;">AUD to EUR Rate</a></p>
-<p><a href="/currency/eur-to-cad" style="color: var(--primary-color); text-decoration: underline;">EUR to CAD Rate</a></p>
-<p><a href="/currency/eur-to-gbp" style="color: var(--primary-color); text-decoration: underline;">EUR to GBP Rate</a></p>
-<p><a href="/crypto/btc-to-eur" style="color: var(--primary-color); text-decoration: underline;">Bitcoin to Euros</a></p>
+                <p><a href="/currency/usd-to-hkd" style="color: var(--primary-color); text-decoration: underline;">USD to HKD Rate</a></p>
+<p><a href="/currency/nok-to-eur" style="color: var(--primary-color); text-decoration: underline;">NOK to EUR Rate</a></p>
+<p><a href="/currency/eur-to-usd" style="color: var(--primary-color); text-decoration: underline;">EUR to USD Rate</a></p>
+<p><a href="/crypto/sol-to-usd" style="color: var(--primary-color); text-decoration: underline;">Solana to US Dollars</a></p>
                 <p><a href="/currency" style="color: var(--primary-color); text-decoration: underline;">Back to Currency
                         Converter Hub</a></p>
             </div>
