--- a/time-zone/gmt-to-ist/index.html
+++ b/time-zone/gmt-to-ist/index.html
@@ -118,9 +118,9 @@
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
                 <p><a href="/time-zone/jst-to-est" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/pst-to-gmt" style="color: var(--primary-color); text-decoration: underline;">Pacific Time (PT) to London (GMT/BST)</a></p>
-<p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
-<p><a href="/time-code/convert-gmt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Greenwich Mean Time to Local</a></p>
+<p><a href="/time-zone/gmt-to-est" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
+<p><a href="/time-code/convert-pdt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Pacific Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
             </div>
