--- a/time-zone/pst-to-ist/index.html
+++ b/time-zone/pst-to-ist/index.html
@@ -117,9 +117,9 @@
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px; margin-top: 32px;">Related Time Zones</h3>
             <div class="internal-links-cluster">
-                <p><a href="/time-zone/cet-to-cst" style="color: var(--primary-color); text-decoration: underline;">Central European Time (CET) to China Standard Time (CST)</a></p>
-<p><a href="/time-zone/cst-to-est" style="color: var(--primary-color); text-decoration: underline;">China Standard Time (CST) to Eastern Time (ET)</a></p>
-<p><a href="/time-zone/jst-to-est" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Eastern Time (ET)</a></p>
+                <p><a href="/time-zone/gmt-to-est" style="color: var(--primary-color); text-decoration: underline;">London (GMT/BST) to Eastern Time (ET)</a></p>
+<p><a href="/time-zone/jst-to-pst" style="color: var(--primary-color); text-decoration: underline;">Japan Standard Time (JST) to Pacific Time (PT)</a></p>
+<p><a href="/time-zone/est-to-ist" style="color: var(--primary-color); text-decoration: underline;">Eastern Time (ET) to India Standard Time (IST)</a></p>
 <p><a href="/time-code/convert-edt-to-local-time" style="color: var(--primary-color); text-decoration: underline;">Eastern Daylight Time to Local</a></p>
                 <p><a href="/multi-timezone" style="color: var(--primary-color); text-decoration: underline;">Compare
                         multiple time zones at once</a></p>
